--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+*.vscode
+*/.vscode
 
 # Mono auto generated files
 mono_crash.*
